--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,25 @@
 <head>
     <title>Gulp</title>
     <meta charset="UTF-8">
+    <!-- build:css css/vendor.css -->
+    <!-- bower:css -->
+    <!-- endbower -->
+    <!-- endbuild -->
     <link rel="stylesheet" href="./styles/build.css">
 </head>
 <body>
+
+    Привет! Это страничка Gulp!
+
+    <!-- build:js js/vendor.js -->
+    <!-- bower:js -->
+    <!-- endbower -->
+    <!-- endbuild -->
+
+    <!-- build:js js/scripts.min.js -->
+    <script src="js/about.js"></script>
+    <script src="js/main.js"></script>
+    <!-- endbuild -->
 
 </body>
 </html>
