fix hot-reload of javaScript

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Gulp</title>
+    <title>Tutorial of using the Gulp</title>
     <meta charset="UTF-8">
+
     <!-- build:css css/vendor.css -->
     <!-- bower:css -->
     <!-- endbower -->
     <!-- endbuild -->
+
     <link rel="stylesheet" href="./styles/build.css">
 </head>
 <body>
